--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="C:\Users\keerthana\Desktop\Github name fetch\assests\github logo.jpeg" alt="GitHub Logo" />
+        <img src=".\assests\github logo.jpeg" alt="GitHub Logo" />
       </header>
       <div class="input"></div>
       <div class="cards"></div>
@@ -20,7 +20,7 @@
         <a href="mailto:keerthanahshere@gmail.com"><p>Send Email</p></a>
         <a href="https://github.com/Yuvrajhere/github-profile-details-fetcher"><p>Code</p></a>
         <a class="github-link" href="https://github.com/Yuvrajhere">
-          <p>Github<img src="C:\Users\keerthana\Desktop\Github name fetch\assests\github logo.jpeg" alt="GitHub Logo"></p>
+          <p>Github<img src=".\assests\github logo.jpeg" alt="GitHub Logo"></p>
         </a>
       </div>
     </footer>
