--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
   </head>
+  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./GitHubCard/index.js"></script>  -->
   <body>
     <div class="container">
       <header class="header">
@@ -24,7 +26,7 @@
         </a>
       </div>
     </footer>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./GitHubCard/index.js"></script>
+ <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./GitHubCard/index.js"></script> 
   </body>
 </html>
